@@ -1,7 +1,7 @@
 ## Interface: 80000
 ## Author: Merathilis
 ## Credits: Benik, Blazeflack, Azilroka, Simpy, Whiro, Darth Predator, fgprodigal, Elv & all AddOn Authors who inspired me.
-## Version: 3.39
+## Version: 3.40
 ## Title: |cFF00c0faElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -11,7 +11,7 @@
 ## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, AddOnSkins, BigWigs, ls_Toasts
 ## X-ElvVersion: 10.81
-## X-Curse-Packaged-Version: 3.38
+## X-Curse-Packaged-Version: 3.40
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
