@@ -1,3 +1,12 @@
+[b][color=orange]v3.40[/color], 14.09.2018[/b][list]
+[*]Code updates to NamePlate Auras.
+[*]Added WarScrolls to the RaidBuffs.
+[*]Update ProjectAzilroka compatibily.
+[*]Added back DBM skin. I only touch the Range/Info Frame.
+[*]Fixed an error in the RaidUI skin.
+[*]Added back the install steps for the AddOns.
+[*]A lot of skin updates.[/list]
+
 [b][color=orange]v3.39[/color], 08.09.2018[/b][list]
 [*]Remove the BenikUI incompatibility checks. Sorry for this.
 [*]Fixed an error in Enhanced Namplateaura if the Player NamePlate was enabled. #27
